チャットボタンを押すと画面遷移するようにした

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".HimaTouroku">
+        </activity>
+        <activity
+            android:name=".Chat">
         </activity>
     </application>
 
