プロフィールボタンを押すと画面遷移するようにした

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".Chat">
         </activity>
+        <activity
+            android:name=".Profile">
+        </activity>
     </application>
 
 </manifest>
