--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
-    namespace 'com.example.monoapp'
+    namespace 'com.example.Hows'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.monoapp"
+        applicationId "com.example.Hows"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -36,4 +37,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation platform('com.google.firebase:firebase-bom:32.6.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
